deployments/desafio-maistodos/metabase/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-svc
  namespace: desafio-maistodos
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: metabase
  sessionAffinity: None
  type: NodePort
