deployments/desafio-maistodos/metabase/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:021708085540:certificate/60b716fb-9361-4380-b33b-550d24c86203
    alb.ingress.kubernetes.io/group.name: ext-maistodos
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect:  '443'
    alb.ingress.kubernetes.io/actions.root-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    alb.ingress.kubernetes.io/target-type: ip
  name: metabase-ingress
  namespace: desafio-maistodos
spec:
  rules:
  - host: metabase.maistodos.click
    http:
      paths:
      - backend:
          service:
            name: metabase-svc
            port:
              number: 3000
        path: /*
        pathType: ImplementationSpecific
